--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://stageandsoundrentalco.github.io/Meet-the-Team/">https://stageandsoundrentalco.github.io/Meet-the-Team/</a><br>
+                <a target="_bLank" href="https://stageandsoundrentalco.s3.us-east-005.backblazeb2.com/Meet+the+Team/index.html">https://stageandsoundrentalco.s3.us-east-005.backblazeb2.com/Meet+the+Team/index.html</a><br>
+                <a target="_bLank" href="https://vercel.live/link/meet-the-team-git-main-stageandsoundrentalcos-projects.vercel.app?via=deployment-domains-list&p=1&page=/">https://vercel.live/link/meet-the-team-git-main-stageandsoundrentalcos-projects.vercel.app?via=deployment-domains-list&p=1&page=/</a><br>
+                <a target="_bLank" href="https://spontaneous-hummingbird-d80edd.netlify.app">https://spontaneous-hummingbird-d80edd.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
